fix alignment of fix lines; adjusted menu responsive due to more nav dots

--- a/election_errors/en/application.less
+++ b/election_errors/en/application.less
@@ -101,7 +101,7 @@ body {
   list-style: none;
   margin-left: 0px;
   position: absolute;
-  top: 90px;
+  top: 85px;
   right: 0;
 }
 #sidebar #menu li {
@@ -131,7 +131,7 @@ body {
 
 #sidebar #social_links{
   list-style: none;
-  margin: 50px 0 0;
+  margin: 65px 0 0;
   .st_sharethis_large {
     width: 25px;
     cursor: pointer;
@@ -158,28 +158,19 @@ body {
   bottom: 10px;
 }
 
-@media (max-height: 685px) {
-  #sidebar #popup_menu_button{
+@media (max-height: 720px) {
+  #sidebar #popup_menu_button {
     margin: 5px auto;
   }
-
-  #sidebar #menu{
+  #sidebar #menu {
     top: 75px;
   }
-
-  #sidebar #social_links{
+  #sidebar #social_links {
     margin-left: 4px;
+    margin-top: 65px;
   }
-  #sidebar #social_links li{
+  #sidebar #social_links li {
     display: inline-block;
-  }
-}
-
-@media (max-height: 701px) {
-  #sidebar {
-    #social_links {
-      margin-top: 30px;
-    }
   }
 }
 
@@ -3449,7 +3440,7 @@ body {
   margin-bottom: 0px;
 }
 #page16a .line_fix3_img img {
-  margin-left: 66px;
+  margin-left: 33px;
 }
 #page16a header h3 {
   text-align: center;
@@ -3478,7 +3469,7 @@ body {
 }
 #page17 .top header h3 {
   float: right;
-  margin: 0px 16.3% 50px 0px;
+  margin: 0px 93px 50px 0px;
 }
 
 #page17 .top header h3 span {
